# Mavis

./: .gitignore  LICENSE  README.md  SKILL.md  install.py  pyproject.toml
adapters/: mcp.json
adapters/claude-code/: CLAUDE.md
adapters/codex/: SKILL.md
adapters/copilot/.github/: copilot-instructions.md
adapters/cursor/: .cursorrules
adapters/windsurf/: .windsurfrules
agents/: openai.yaml
marvis/: __init__.py  cli.py
marvis/core/: __init__.py  batch_processor.py  doc_analyzer.py  file_organizer.py  format_converter.py  knowledge_base.py  ocr.py  project_scanner.py  search.py  security_audit.py  system_manager.py  task_scheduler.py  web_monitor.py  workflow.py
marvis/mcp/: __init__.py  server.py
marvis/mcp/tools/: __init__.py
marvis/utils/: __init__.py  config.py  fs.py  shell.py
references/: capability_map.md
scripts/: batch_processor.py  doc_analyzer.py  file_organizer.py  format_converter.py  knowledge_base.py  ocr_search.py  project_scanner.py  security_audit.py  smart_search.py  system_manager.py  task_scheduler.py  web_monitor.py  workflow.py
